<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP110_MAIN" Id="{97c6907a-de33-4884-8db3-52c8c3f60c45}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP110_MAIN
VAR
	OP110_Modeselection_FB: Mode_Selection_Block1;
	
//	OP110_Cycle_Time: Cycle_Time_FB;
	TP_100ms: TP;
	Pulse_100ms: BOOL;
	Times: LREAL;
	Start: BOOL;
	Gen_Timer: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Function Calling

OP110_Manual();
OP110_AUTOSEQUENCE();
OP110_Error();
OP110_Initialization_Seq();

//MOdeselection From HMI

IF (OP110_GVL.OP110_HMI_AutoMode AND NOT OP110_GVL.OP110_HMI_ManualMOde AND NOT OP110_GVL.OP110_HMI_StepMode) THEN
	OP110_Modeselection_FB.ModeWord:=1;
	ELSIF (NOT OP110_GVL.OP110_HMI_AutoMode AND OP110_GVL.OP110_HMI_ManualMOde AND NOT OP110_GVL.OP110_HMI_StepMode) THEN
		OP110_Modeselection_FB.ModeWord:=2;
	ELSIF  (NOT OP110_GVL.OP110_HMI_AutoMode AND NOT OP110_GVL.OP110_HMI_ManualMOde AND  OP110_GVL.OP110_HMI_StepMode) THEN
		OP110_Modeselection_FB.ModeWord:=3;
    ELSE   
		OP110_Modeselection_FB.ModeWord:=0;
END_IF
	
OP110_Modeselection_FB(
	ModeWord:= , 
	HomeConditionOK:=OP110_HomeConditionOK , 
	OperationEnable:=OP110_AutoSelected, 
	StartPB:=OP110_HMI_CycleStart , 
	SafetyAndNOError:= OP110_Safety_OK, 
	ModeAck:=TRUE, 
	HomingINProgress:=OP110_HomeRunning , 
	TempHomeOK:=OP110_Temp_hmeOK , 
	ResetPB:= , 
	AutoSelected=> OP110_AutoSelected, 
	ManualSelected=> OP110_ManualSelected, 
	StepSelected=>OP110_StepSelected , 
	ModeSelAck_Indication=> , 
	StatusDisplay=> , 
	AutoRunning:=OP110_AutoRunning, 
	StepRunning:=OP110_StepRunning , 
	StartEnable:=OP110_StartEnable  , 
	MachineStop:=OP110_Machine_Stop );

//IF OP110_AutoSelected OR OP110_ManualSelected THEN
//	SR110_Vert_servo.bEnable:=TRUE;
//END_IF
OP110_Safety_OK:=OperationEnable;

IF NOT SR110_Vert_servo.bAxisHomed THEN
	SR110_Vert_servo_not_Home:=TRUE;
ELSE
	SR110_Vert_servo_not_Home:=FALSE;
END_IF

IF OP110_GVL.SR110_Vert_servo.bAxisError  THEN
	OP110_ErrorActive:=TRUE;
END_IF

IF OP110_Stop_Request AND NOT OP110_STN_ENABLE THEN
	OP110_Machine_Stop:=1;
END_IF
Gen_Timer(IN:=OP110_Machine_Stop,PT:=T#5S);
IF Gen_Timer.Q THEN
	OP110_Machine_Stop:=0;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="OP110_MAIN">
      <LineId Id="3" Count="53" />
      <LineId Id="77" Count="5" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>